[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
day1 = { path = "src/day1" }
day2 = { path = "src/day2" }
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }